<resources>
    <string name="app_name">Android1</string>
    <string name="LogIn">手机号登录</string>
    <string name="Register">注册</string>
    <string name="OtherRegisters">其他登录方式</string>
    <string name="WeChat">微信</string>
    <string name="QQ">QQ</string>
    <string name="WeiBo">微博</string>
    <string name="WangYi">网易</string>
    <string name="PhoneLand">手机号登录</string>
    <string name="PhoneNumber">请输入手机号码</string>
    <string name="code">请输入密码</string>
    <string name="Loginn">登录</string>
    <string name="Codee">请输入验证码</string>
</resources>
